cabal-version:      3.0
name:               ppad-base58
version:            0.1.2
synopsis:           base58 and base58check encodings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  The base58 and base58check encodings.

source-repository head
  type:     git
  location: git.ppad.tech/base58.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.ByteString.Base58
    , Data.ByteString.Base58Check
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-sha256 > 0.2 && < 0.3
    , primitive >= 0.8 && < 0.10
