cabal-version:      3.0
name:               ppad-base58
version:            0.2.1
synopsis:           base58 and base58check encoding/decoding.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  base58 and base58check encoding/decoding on strict bytestrings.

source-repository head
  type:     git
  location: git.ppad.tech/base58.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.ByteString.Base58
    , Data.ByteString.Base58Check
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13
    , ppad-sha256 > 0.2 && < 0.3

test-suite base58-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      aeson
    , base
    , base16-bytestring
    , bytestring
    , ppad-base58
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text

benchmark base58-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , ppad-base58

